# inf

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: error.rs  lib.rs  lib_refactor.rs  main.rs  parser.rs  section.rs  util.rs
src/inf/: __init__.py  document.py  entry.py  lexer.py  parser.py  section.py  token.py  utils.py
tests/: test_load.py
