[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "inf"
version = "0.1.1"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
inf = "inf.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 79

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "mkdocs-material>=9.6.20",
    "mkdocstrings-python>=1.18.2",
    "mypy>=1.18.2",
    "ruff>=0.13.2",
]
